<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Hatacalc!</string>
    <string name="app_name">Hatacalc</string>
<string name="ChangeIf">IF</string>
<string name="ChangeLoop">LOOP</string>
<string name="ChangeMath1">MATH1</string>
<string name="ChangeMath2">MATH2</string>
<string name="ChangeHex">0x</string>
<string name="ChangeEng">ENG</string>
<string name="ChangeFunc">FUNC</string>
<string name="ChangeVar">VAR</string>
<string name="Back">\u21a9</string>
<string name="Num0">0</string>
<string name="Num1">1</string>
<string name="Num2">2</string>
<string name="Num3">3</string>
<string name="Num4">4</string>
<string name="Num5">5</string>
<string name="Num6">6</string>
<string name="Num7">7</string>
<string name="Num8">8</string>
<string name="Num9">9</string>
<string name="NumA">A</string>
<string name="NumB">B</string>
<string name="NumC">C</string>
<string name="NumD">D</string>
<string name="NumE">E</string>
<string name="NumF">F</string>
<string name="FuncDef">def f(x)=exp</string>
<string name="FuncDefIns">def</string>
<string name="FuncList">Func List</string>
<string name="VarList">Var List</string>
<string name="LetterQ">q</string>
<string name="LetterW">w</string>
<string name="LetterE">e</string>
<string name="LetterR">r</string>
<string name="LetterT">t</string>
<string name="LetterY">y</string>
<string name="LetterU">u</string>
<string name="LetterI">i</string>
<string name="LetterO">o</string>
<string name="LetterP">p</string>
<string name="LetterA">a</string>
<string name="LetterS">s</string>
<string name="LetterD">d</string>
<string name="LetterF">f</string>
<string name="LetterG">g</string>
<string name="LetterH">h</string>
<string name="LetterJ">j</string>
<string name="LetterK">k</string>
<string name="LetterL">l</string>
<string name="LetterZ">z</string>
<string name="LetterX">x</string>
<string name="LetterC">c</string>
<string name="LetterV">v</string>
<string name="LetterB">b</string>
<string name="LetterN">n</string>
<string name="LetterM">m</string>
<string name="LParen">(</string>
<string name="RParen">)</string>
<string name="Assign">=</string>
<string name="Add">\u002b</string>
<string name="Sub">\u2212</string>
<string name="Mul">\u00d7</string>
<string name="Div">\u00f7</string>
<string name="Hex0x">0x</string>
<string name="Bin0b">0b</string>
<string name="Calc">CALC</string>
<string name="AutoCalc">AUTO</string>
<string name="Deg">Deg</string>
<string name="Rad">Rad</string>
<string name="Ans">Ans</string>
<string name="BS">BS</string>
<string name="Clear">C</string>
<string name="Mod">mod</string>
<string name="ModIns">mod</string>
<string name="Sum">sum</string>
<string name="SumIns">sum(</string>
<string name="Ave">ave</string>
<string name="AveIns">ave(</string>
<string name="Comma">,</string>
<string name="Period">.</string>
<string name="Left">\u25c0</string>
<string name="Up">\u21e7</string>
<string name="Right">\u25b6</string>
<string name="Down">\u21e9</string>
<string name="Change">\u21d4</string>
<string name="SemiColon">;</string>
<string name="Quot">\&quot;</string>
<string name="Dec">Dec</string>
<string name="Hex">Hex</string>
<string name="Bin">Bin</string>
<string name="Kilo">Kilo</string>
<string name="Mega">Mega</string>
<string name="Giga">Giga</string>
<string name="Tera">Tera</string>
<string name="Milli">milli</string>
<string name="Micro">micro</string>
<string name="Nano">nano</string>
<string name="Pico">pico</string>
<string name="KiloIns">K</string>
<string name="MegaIns">M</string>
<string name="GigaIns">G</string>
<string name="TeraIns">T</string>
<string name="MilliIns">m</string>
<string name="MicroIns">u</string>
<string name="NanoIns">n</string>
<string name="PicoIns">p</string>
<string name="And">&amp;</string>
<string name="Or">|</string>
<string name="Xor">^</string>
<string name="Not">~</string>
<string name="LShift">&lt;&lt;</string>
<string name="RShift">&gt;&gt;</string>
<string name="Lt">&lt;</string>
<string name="Le">&lt;=</string>
<string name="Eq">==</string>
<string name="Ne">!=</string>
<string name="Ge">&gt;=</string>
<string name="Gt">&gt;</string>
<string name="Land">&amp;&amp;</string>
<string name="Lor">||</string>
<string name="Lnot">!</string>
<string name="Pi">\u03c0</string>
<string name="Napier">\u0435</string>
<string name="Sqrt">\u221a</string>
<string name="SqrtIns">\u221a(</string>
<string name="Permutation">nPr</string>
<string name="PermutationIns">P</string>
<string name="Combination">nCr</string>
<string name="CombinationIns">C</string>
<string name="Factorial">n!</string>
<string name="FactorialIns">!</string>
<string name="Sin">sin</string>
<string name="SindIns">sind(</string>
<string name="SinrIns">sinr(</string>
<string name="Cos">cos</string>
<string name="CosdIns">cosd(</string>
<string name="CosrIns">cosr(</string>
<string name="Tan">tan</string>
<string name="TandIns">tand(</string>
<string name="TanrIns">tanr(</string>
<string name="Asin">asin</string>
<string name="AsindIns">asind(</string>
<string name="AsinrIns">asinr(</string>
<string name="Acos">acos</string>
<string name="AcosdIns">acosd(</string>
<string name="AcosrIns">acosr(</string>
<string name="Atan">atan</string>
<string name="AtandIns">atand(</string>
<string name="AtanrIns">atanr(</string>
<string name="Ln">ln</string>
<string name="LnIns">ln(</string>
<string name="Log">log</string>
<string name="LogIns">log(</string>
<string name="Percent">%</string>
<string name="Power">pow</string>
<string name="PowerIns">**</string>
<string name="Loop">loop</string>
<string name="LoopIns">loop(</string>
<string name="While">loop</string>
<string name="WhileIns">while(</string>
<string name="If">if</string>
<string name="IfIns">if(</string>
<string name="LBrack">{</string>
<string name="RBrack">}</string>
<string name="ExpressionHint">Expression</string>
<string name="AnswerHint">Answer</string>
<string name="ToggleAutoCalc">Toggle Auto Calc</string>
<string name="PasteFuncDef">Paste Func Def</string>
<string name="Remove">Remove</string>
<string name="Removed">removed</string>
<string name="NoFunc">No Func</string>
<string name="NoVar">No Var</string>
<string name="FuncListBtn">List</string>
<string name="VarListBtn">List</string>
<string name="Func1">f1</string>
<string name="Func2">f2</string>
<string name="Func3">f3</string>
<string name="Func1Ins">f1(</string>
<string name="Func2Ins">f2(</string>
<string name="Func3Ins">f3(</string>
</resources>
