<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Panel"
	>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLParen" android:text="@string/LParen" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonRParen" android:text="@string/RParen" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonComma" android:text="@string/Comma" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonSemiColon" android:text="@string/SemiColon" style="@style/ButtonFunc1"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button07" android:text="@string/Num7" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button08" android:text="@string/Num8" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button09" android:text="@string/Num9" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonDiv" android:text="@string/Div" style="@style/ButtonFunc1"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button04" android:text="@string/Num4" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button05" android:text="@string/Num5" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button06" android:text="@string/Num6" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonMul" android:text="@string/Mul" style="@style/ButtonFunc1"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button01" android:text="@string/Num1" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button02" android:text="@string/Num2" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button03" android:text="@string/Num3" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonSub" android:text="@string/Sub" style="@style/ButtonFunc1"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/Button00" android:text="@string/Num0" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonPeriod" android:text="@string/Period" style="@style/ButtonDigit"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonAns" android:text="@string/Ans" style="@style/ButtonFunc3"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonAdd" android:text="@string/Add" style="@style/ButtonFunc1"/>
	</LinearLayout>
</LinearLayout>
