<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Panel"
	>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonBack" android:text="@string/Back" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonIf" android:text="@string/If" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLBrack" android:text="@string/LBrack" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonRBrack" android:text="@string/RBrack" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLand" android:text="@string/Land" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLor" android:text="@string/Lor" style="@style/ButtonFunc2"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLt" android:text="@string/Lt" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLe" android:text="@string/Le" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonEq" android:text="@string/Eq" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonNe" android:text="@string/Ne" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonGe" android:text="@string/Ge" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonGt" android:text="@string/Gt" style="@style/ButtonFunc2"/>
	</LinearLayout>
</LinearLayout>
