<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Panel"
	>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonBack" android:text="@string/Back" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonSin" android:text="@string/Sin" style="@style/ButtonSinCosTan"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonCos" android:text="@string/Cos" style="@style/ButtonSinCosTan"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonTan" android:text="@string/Tan" style="@style/ButtonSinCosTan"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLn" android:text="@string/Ln" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonLog" android:text="@string/Log" style="@style/ButtonFunc3"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonDegRad" android:text="@string/Change" style="@style/ButtonDegrad"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonAsin" android:text="@string/Asin" style="@style/ButtonAsinAcosAtan"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonAcos" android:text="@string/Acos" style="@style/ButtonAsinAcosAtan"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonAtan" android:text="@string/Atan" style="@style/ButtonAsinAcosAtan"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonPi" android:text="@string/Pi" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonNapier" android:text="@string/Napier" style="@style/ButtonFunc1"/>
	</LinearLayout>
</LinearLayout>
