<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Panel"
	>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonBack" android:text="@string/Back" style="@style/ButtonFunc1" android:layout_width="wrap_content" android:layout_weight="2.0"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonFuncDef" android:text="@string/FuncDef" style="@style/ButtonFuncDef" android:layout_width="wrap_content" android:layout_weight="4.0"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonAssign" android:text="@string/Assign" style="@style/ButtonFunc1" android:layout_width="wrap_content" android:layout_weight="2.0"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonFuncListBtn" android:text="@string/FuncListBtn" style="@style/ButtonFunc4" android:layout_width="wrap_content" android:layout_weight="2.0"/>
	</LinearLayout>
	<LinearLayout style="@style/Row">
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonFunc1" android:text="@string/Func1" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonFunc2" android:text="@string/Func2" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonFunc3" android:text="@string/Func3" style="@style/ButtonFunc2"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonX" android:text="@string/LetterX" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonY" android:text="@string/LetterY" style="@style/ButtonFunc1"/>
		<jp.hatamonkensetsu.software.android.androidlib.ColorButton android:id="@+id/ButtonZ" android:text="@string/LetterZ" style="@style/ButtonFunc1"/>
	</LinearLayout>
</LinearLayout>
